新增 GC 比較範例與一鍵執行腳本,README 加入實測結果
GcDemo 以同一分配負載實測 G1/ZGC/Parallel/Serial,
驗證 Java 23 分代 ZGC 預設(Minor/Major Cycles);
run-all.sh 可一鍵執行全部範例,README 新增第 8 章對照表與實測輸出。

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>